# Circuit_simulation

./: .gitignore  README.md  coupled_resonator_tools.py  experiment1_single_L.py  experiment2_network_compare.py  experiment3_activation_compare.py  neural_network_diagrams.py  pyproject.toml  stage4_comprehensive_analysis.py  task1_improved_dataset.py  task2_cnn_network.py  task2_complex_feature_network.py  task2_mixed_z_network.py  task2_pinn_network.py  task2_z_network.py  task3_train_networks.py
results/: activation_experiment_results.json  experiment1_results.json  experiment2_results.json  experiment3_results.json
