[project]
name = "circuit-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "graphviz>=0.21",
    "matplotlib>=3.10.5",
    "netron>=8.5.2",
    "numpy>=2.3.2",
    "onnx>=1.18.0",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "visdom>=0.2.4",
    "wandb>=0.21.1",
]
